# CppTemplate

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
